# opendlv.scaledcars

./: .gitignore  README.md
code/: CMakeLists.txt
code/arduino/: Term4_carArduino.ino  term4_actuators.ino  term4_new.ino  term4_sensors.ino
code/arduino/term4_car_lib/: Car.cpp  DistanceSensor.cpp  ESCMotor.cpp  InfraredSensor.cpp  Netstrings.cpp  Odometer.cpp  SteeringMotor.cpp  UltrasonicSensor.cpp  keywords.txt  protocol.c  protocol.h  term4_car_lib.h
code/control/: .gitignore  CMakeLists.txt
code/control/ParkingTest/Car/: Car.java  CarImpl.java  CarState.java  Motor.java  Sensor.java  Street.java
code/control/ParkingTest/Test/: CarImplTest.java
code/control/boxparker/: CMakeLists.txt
code/control/boxparker/apps/: scaledcars-control-boxparker.cpp
code/control/boxparker/include/: BoxParker.h
code/control/boxparker/src/: BoxParker.cpp
code/control/communicationlink/: CMakeLists.txt
code/control/datahandler/: CMakeLists.txt
code/control/decisionmaker/: CMakeLists.txt
code/control/lanefollower/: CMakeLists.txt
code/control/overtaker/: CMakeLists.txt
code/control/parallelparker/: CMakeLists.txt  oldPULL  parallelParker
code/control/park/: CMakeLists.txt
code/control/proxy/: CMakeLists.txt
code/control/serialreceivehandler/: CMakeLists.txt
code/control/serialsendhandler/: CMakeLists.txt
code/control/udpconnection/: CMakeLists.txt
code/control/udpconnectionreceiver/: CMakeLists.txt
code/control/udpconnectionstreamer/: CMakeLists.txt
code/control/udpconnectionstreamer/apps/: scaledcars-control-udpconnectionstreamer.cpp
code/control/udpconnectionstreamer/include/: UDPConnectionStreamer.h
code/control/udpconnectionstreamer/src/: UDPConnectionStreamer.cpp
code/control/udpconnectionstreamer/testsuites/: UDPConnectionStreamerTestSuite.h
code/perception/: CMakeLists.txt
code/perception/decisionmaker/: CMakeLists.txt
code/perception/overtaker/: CMakeLists.txt
code/protocol/: Makefile  main.c  make.py  protocol.11.c  protocol.c  protocol.h  test.c
code/protocol/src/: main.c  protocol.11.c  protocol.14.c  protocol.c  protocol.h  serial.c  serial.h
docker/: Makefile
docker/builds/scaledcars-on-opendlv-on-opendlv-core-on-opendavinci-on-base-lanefollower/: .dockerignore  Dockerfile
docker/builds/scaledcars-on-opendlv-on-opendlv-core-on-opendavinci-ubuntu-16.04-armhf-complete-lanefollower/: .dockerignore
miniature/boxparker/: CMakeLists.txt
miniature/boxparker/src/: BoxParker.cpp
miniature/config/: configuration
miniature/lanedetector/src/: LaneDetector.cpp
miniature/lanefollower/src/: LaneFollower.cpp
resources/odvd/: ODVDScaledCarsDataModel.odvd
scripts/: armBuildComplete.sh  armBuildIncremental.sh  boxparker.sh  build.sh  buildComplete.sh  cam.sh  camera.sh  cameraProxy.sh  cleanAll.sh  deletecontainers.sh  deleteimages.sh  driver.sh  lanedetector.sh  lanefollower.sh  odCam.sh  overtaker.sh  replayVideo.sh  runarmhf.sh  send.sh  sidewaysparker.sh  simpledriver.sh  simu.sh  stopcontainers.sh
usecases/Parking/: docker-compose.yml  docker-makefile
usecases/Parking/DIT-168/: Parking-boxes-1.scnx  Parking-parallel-1.scnx  configuration
usecases/armhf/: Dockerfile  docker-compose.yml
usecases/armhf/DIT-168/: configODV.sh  configuration  setupODVconfig.sh
usecases/car/: docker-compose.yml  log.txt
usecases/car/DIT-168/: configODV.sh  configuration  recorder.rec
usecases/lanefollower/: docker-compose.yml
usecases/lanefollower/DIT-168/: SEM_Test_Track-overtaking.scnx  configuration  oldpid.txt
usecases/lanefollowerSim/: docker-compose.yml
usecases/lanefollowerSim/DIT-168/: configuration
usecases/lanefollowertest/: docker-compose.yml
usecases/lanefollowertest/DIT-168/: configODV.sh  configuration  oldpid.txt
usecases/overtaker/: docker-compose.yml
usecases/overtaker/DIT-168/: configuration  oldpid.txt
usecases/park/: docker-compose.yml
usecases/park/DIT-168/: configODV.sh  configuration  parking.scnx
usecases/parkingcar/: docker-compose.yml  xterm.txt
usecases/parkingcar/DIT-168/: configODV.sh  configuration  setupODVconfig.sh
usecases/serial/: docker-compose.yml
usecases/serial/DIT-168/: configODV.sh
usecases/udp/: Dockerfile  docker-compose.yml
usecases/udp/DIT-168/: configuration
(+206 files in other folders)
